compiler/test/conformance/testdata/errors/15_uninit_field_at_call.yz
Bar: { f String }

foo: {
    b Bar
    print(b.f)
}

main: {
    b : Bar()
    foo(b)
}
